--- a/app/views/account.html
+++ b/app/views/account.html
@@ -17,24 +17,7 @@
   </li>
 </ol>
 
-<ul class="nav nav-tabs nav-sendrecv">
-  <li class="active">
-    <a href="#/device/{{device.id}}/account/{{account.id}}">
-      <span class="glyphicon glyphicon-list"></span> Transactions
-    </a>
-  </li>
-  <li>
-    <a href="#/device/{{device.id}}/account/{{account.id}}/receive">
-      <span class="glyphicon glyphicon-cloud-download"></span> Receive
-    </a>
-  </li>
-  <li>
-    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/send"
-       ng-disabled="account.isEmpty() || !device.isConnected()">
-      <span class="glyphicon glyphicon-cloud-upload"></span> Send
-    </a>
-  </li>
-</ul>
+<ng-include src="'views/account.nav.html'"></ng-include>
 
 <p class="text-center text-muted h1"
    ng-show="account.transactions == null">
@@ -77,10 +60,10 @@
           ng-if="!tx.comment"
           ng-switch="tx.analysis.type">
         <span class="text-success" ng-switch-when="recv">
-          <span class="glyphicon glyphicon-arrow-down"></span> {{tx.analysis.addr.toString()}}
+          <span class="glyphicon glyphicon-plus"></span> {{tx.analysis.addr.toString()}}
         </span>
         <span class="text-danger" ng-switch-when="sent">
-          <span class="glyphicon glyphicon-arrow-up"></span> {{tx.analysis.addr.toString()}}
+          <span class="glyphicon glyphicon-minus"></span> {{tx.analysis.addr.toString()}}
         </span>
         <span class="text-warning" ng-switch-when="self">
           <span class="glyphicon glyphicon-user"></span> Sent to myself
