--- a/app/views/account.html
+++ b/app/views/account.html
@@ -42,6 +42,7 @@
   </thead>
   <tbody>
     <tr class="txlist-tx"
+        ng-class="{ active: tx.active }"
         ng-click="tx.active = !tx.active"
         ng-repeat-start="tx in account.transactions">
       <td class="txlist-date text-center"
@@ -86,7 +87,7 @@
         ng-animate
         ng-repeat-end>
       <td colspan="5">
-        <dl>
+        <dl class="dl-horizontal">
           <dt>Transaction details:</dt>
           <dd class="txlist-hash"><a target="_blank" href="https://blockchain.info/tx/{{tx.hash}}">Blockchain</a></dd>
         </dl>
