--- a/app/views/account.nav.html
+++ b/app/views/account.nav.html
@@ -1,17 +1,17 @@
 <ul class="nav nav-tabs nav-sendrecv"
     ng-controller="NavCtrl">
   <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}$') }">
-    <a href="#/device/{{device.id}}/account/{{account.id}}">
+    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}">
       <span class="glyphicon glyphicon-list"></span> Transactions
     </a>
   </li>
   <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}/receive$') }">
-    <a href="#/device/{{device.id}}/account/{{account.id}}/receive">
+    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/receive">
       <span class="glyphicon glyphicon-cloud-download"></span> Receive
     </a>
   </li>
   <li ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}/send$') }">
-    <a href="#/device/{{device.id}}/account/{{account.id}}/send"
+    <a class="btn" href="#/device/{{device.id}}/account/{{account.id}}/send"
        ng-disabled="account.isEmpty() || !device.isConnected()">
       <span class="glyphicon glyphicon-cloud-upload"></span> Send
     </a>
