--- a/app/views/load.html
+++ b/app/views/load.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="form-group">
-          <label for="pin" class="control-label">PIN</label> (leave empty to disable PIN protection)
+          <label for="pin" class="control-label">PIN</label>&nbsp;(leave empty to keep PIN protection disabled)
           <input type="text" name="pin" id="pin" class="form-control"
                  ng-model="settings.pin">
         </div>
