put T&C in a separate div

--- a/app/views/error.html
+++ b/app/views/error.html
@@ -17,7 +17,9 @@
       <hr>
       <div class="text-center">
 
-        <label><input type="checkbox" ng-model="agree"> I agree with the <a href="/legal.html" target="_blank">Terms &amp; Conditions</a></label>
+        <div>
+          <label><input type="checkbox" ng-model="agree"> I agree with the <a href="/legal.html" target="_blank">Terms &amp; Conditions</a></label>
+        </div>
 
         <div class="btn-group btn-group-lg text-left">
           <button class="btn-installer-download btn btn-success"
