--- a/app/views/modal.pin.html
+++ b/app/views/modal.pin.html
@@ -8,7 +8,19 @@
         <div class="modal-header">
           <button type="button" class="close" title="Cancel"
                   ng-click="$hide(); callback()">&times;</button>
-          <h4 class="modal-title">{{message || 'Please enter your PIN'}}</h4>
+          <h4 class="modal-title"
+              ng-switch="type">
+            <span ng-switch-when="PinMatrixRequestType_Current">
+              Please enter current PIN:
+            </span>
+            <span ng-switch-when="PinMatrixRequestType_NewFirst">
+              Please enter new PIN:
+            </span>
+            <span ng-switch-when="PinMatrixRequestType_NewSecond">
+              Please re-enter new PIN:<br>
+              <small class="text-danger">Note the buttons numbers have changed!</small>
+            </span>
+          </h4>
         </div>
         <div class="modal-body">
 
