--- a/app/views/modal.pin.html
+++ b/app/views/modal.pin.html
@@ -18,7 +18,7 @@
             </span>
             <span ng-switch-when="PinMatrixRequestType_NewSecond">
               Please re-enter new PIN:<br>
-              <small class="text-danger">Note the buttons numbers have changed!</small>
+              <small class="text-danger">Note that the positions of numbers shown on the device have changed!</small>
             </span>
           </h4>
         </div>
