--- a/app/views/wipe.html
+++ b/app/views/wipe.html
@@ -21,4 +21,6 @@
   <button class="btn btn-danger"
           ng-click="wipe(device)">Wipe</button>
   <a href="#/device/{{device.id}}" class="btn btn-link">Cancel</a>
+
+  <p>If you are running Mac OS X, you need to unplug and reconnect the device before using it again after wiping.</p>
 </fieldset>
