--- a/app/views/recovery.html
+++ b/app/views/recovery.html
@@ -26,7 +26,7 @@
       <div class="form-group">
         <input type="text" class="input-lg" placeholder="Enter seed word"
                data-keyboard=""
-               ng-options="word for word in seedWordlist"
+               ng-options="word for word in seedWordlist | filter:$viewValue:startsWith"
                ng-model="seedWord"
                bs-typeahead>
       </div>
