Use blockTime instead of block #

--- a/app/views/account.html
+++ b/app/views/account.html
@@ -34,7 +34,7 @@
        ng-show="account.transactions != null && account.transactions.length">
   <thead>
     <tr class="text-muted">
-      <th width="16%" class="text-center">Block #</th>
+      <th width="16%" class="text-center">Date</th>
       <th class="txlist-header-address">Address</th>
       <th width="16%" class="txlist-header-amount">Amount</th>
       <th width="16%">Balance</th>
