--- a/app/views/account.html
+++ b/app/views/account.html
@@ -34,7 +34,7 @@
        ng-show="account.transactions != null && account.transactions.length">
   <thead>
     <tr class="text-muted">
-      <th width="16%" class="text-center">Date</th>
+      <th width="20%" class="text-center">Timestamp</th>
       <th class="txlist-header-address">Address</th>
       <th width="16%" class="txlist-header-amount">Amount</th>
       <th width="16%">Balance</th>
@@ -47,7 +47,8 @@
         ng-repeat-start="tx in account.transactions">
       <td class="txlist-date text-center"
           ng-if="tx.timestamp">
-        {{tx.timestamp}}
+        {{tx.timestamp | date:'MM/dd/yy'}}
+        <small class="text-muted">{{tx.timestamp | date:'HH:mm:ss'}}</small>
       </td>
       <td class="txlist-date text-center text-muted"
           ng-if="!tx.timestamp">
