--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -262,6 +262,32 @@ body {
   margin-left: 20px;
 }
 
+/* Overlays */
+
+.overlay-container {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+}
+
+.overlay-default {
+  background: rgba(255, 255, 255, 0.6);
+}
+
+.overlay-content {
+  position: absolute;
+  top: 40%;
+  left: 0;
+  right: 0;
+}
+
 /* Transaction list */
 
 .txlist thead th {
