--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -184,6 +184,13 @@ body {
   bottom: 0;
   height: 100px;
   padding: 30px 0;
+  text-align: center;
+  color: #999;
+  font-size: smaller;
+}
+
+.page-footer a {
+  color: #999;
 }
 
 /* Feedback button & modal */
