--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -182,8 +182,8 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  height: 100px;
-  padding: 30px 0;
+  height: 6em;
+  padding: 1.5em 0;
   text-align: center;
   color: #999;
   font-size: smaller;
