--- a/app/views/modal.pin.html
+++ b/app/views/modal.pin.html
@@ -11,10 +11,12 @@
           <h4 class="modal-title"
               ng-switch="type">
             <span ng-switch-when="PinMatrixRequestType_Current">
-              Please enter current PIN:
+              Please enter current PIN:<br>
+              <small class="text-info">Look at the device for number positions.</small>
             </span>
             <span ng-switch-when="PinMatrixRequestType_NewFirst">
-              Please enter new PIN:
+              Please enter new PIN:<br>
+              <small class="text-info">Look at the device for number positions.</small>
             </span>
             <span ng-switch-when="PinMatrixRequestType_NewSecond">
               Please re-enter new PIN:<br>
@@ -27,44 +29,44 @@
           <div class="form-group">
             <span class="col-sm-4">
               <button type="button" class="btn btn-block btn-lg"
-                      ng-click="pin = pin + '7'">&nbsp;</button>
+                      ng-click="pin = pin + '7'">?</button>
             </span>
             <span class="col-sm-4">
               <button type="button" class="btn btn-block btn-lg"
-                      ng-click="pin = pin + '8'">&nbsp;</button>
+                      ng-click="pin = pin + '8'">?</button>
             </span>
             <span class="col-sm-4">
               <button type="button" class="btn btn-block btn-lg"
-                      ng-click="pin = pin + '9'">&nbsp;</button>
-            </span>
-          </div>
-          <div class="form-group">
-            <span class="col-sm-4">
-              <button type="button" class="btn btn-block btn-lg"
-                      ng-click="pin = pin + '4'">&nbsp;</button>
-            </span>
-            <span class="col-sm-4">
-              <button type="button" class="btn btn-block btn-lg"
-                      ng-click="pin = pin + '5'">&nbsp;</button>
-            </span>
-            <span class="col-sm-4">
-              <button type="button" class="btn btn-block btn-lg"
-                      ng-click="pin = pin + '6'">&nbsp;</button>
+                      ng-click="pin = pin + '9'">?</button>
             </span>
           </div>
           <div class="form-group">
             <span class="col-sm-4">
               <button type="button" class="btn btn-block btn-lg"
-                      ng-click="pin = pin + '1'">&nbsp;</button>
+                      ng-click="pin = pin + '4'">?</button>
+            </span>
+            <span class="col-sm-4">
+              <button type="button" class="btn btn-block btn-lg"
+                      ng-click="pin = pin + '5'">?</button>
+            </span>
+            <span class="col-sm-4">
+              <button type="button" class="btn btn-block btn-lg"
+                      ng-click="pin = pin + '6'">?</button>
+            </span>
+          </div>
+          <div class="form-group">
+            <span class="col-sm-4">
+              <button type="button" class="btn btn-block btn-lg"
+                      ng-click="pin = pin + '1'">?</button>
             </span>
 
             <span class="col-sm-4">
               <button type="button" class="btn btn-block btn-lg"
-                      ng-click="pin = pin + '2'">&nbsp;</button>
+                      ng-click="pin = pin + '2'">?</button>
             </span>
             <span class="col-sm-4">
               <button type="button" class="btn btn-block btn-lg"
-                      ng-click="pin = pin + '3'">&nbsp;</button>
+                      ng-click="pin = pin + '3'">?</button>
             </span>
           </div>
 
