--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -39,7 +39,7 @@
               ({{account.balance | amount}} {{account.coin.coin_shortcut}})
             </span>
             <span ng-if="account.balance == null">
-              <span class="icon-loading"></span>
+              <span class="icon-loading" title="Loading&hellip;"></span>
             </span>
           </small>
         </a>
