--- a/app/views/modal.passphrase.html
+++ b/app/views/modal.passphrase.html
@@ -4,11 +4,10 @@
       <div class="modal-header">
         <button type="button" class="close" title="Cancel"
                 ng-click="$hide(); callback()">&times;</button>
-        <h4 class="modal-title">{{message || 'Please enter your passphrase'}}</h4>
+        <h4 class="modal-title">Please enter your passphrase</h4>
       </div>
       <div class="modal-body">
-        <form class="form-inline"
-              ng-submit="$hide(); callback(passphrase)">
+        <form ng-submit="$hide(); callback(passphrase)">
           <div class="form-group">
             <input type="text" class="form-control input-lg" size="12"
                    autofocus autocomplete="off"
@@ -18,18 +17,32 @@
                    autofocus autocomplete="off"
                    ng-model="passphrase"
                    ng-hide="showPassphrase">
+            <div ng-if="check" style="margin-top: -1px">
+              <input type="text" class="form-control input-lg" size="12"
+                     autofocus autocomplete="off" placeholder="Re-type for control"
+                     ng-model="passphraseCheck"
+                     ng-show="showPassphrase">
+              <input type="password" class="form-control input-lg" size="12"
+                     autofocus autocomplete="off" placeholder="Re-type for control"
+                     ng-model="passphraseCheck"
+                     ng-hide="showPassphrase">
+            </div>
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" ng-model="showPassphrase" ng-checked="false">
+              Show passphrase
+            </label>
           </div>
           <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-lg">Enter</button>
+            <button type="submit" class="btn btn-block btn-primary btn-lg"
+                    ng-disabled="check && passphrase != passphraseCheck">Enter</button>
+            <p class="text-danger"
+               ng-show="check && passphrase && passphraseCheck && passphrase != passphraseCheck">
+              Passphrases do not match
+            </p>
           </div>
         </form>
-
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" ng-model="showPassphrase" ng-checked="false">
-            Show passphrase
-          </label>
-        </div>
       </div>
     </div>
   </div>
