--- a/app/views/modal.passphrase.html
+++ b/app/views/modal.passphrase.html
@@ -10,7 +10,7 @@
         <form ng-submit="$hide(); callback(passphrase)">
           <div class="form-group">
             <input type="text" class="form-control input-lg" size="12"
-                   autofocus autocomplete="off"
+                   autofocus autocomplete="off" autofocus
                    ng-model="passphrase"
                    ng-show="showPassphrase">
             <input type="password" class="form-control input-lg" size="12"
@@ -20,11 +20,11 @@
             <div ng-if="check" style="margin-top: -1px">
               <input type="text" class="form-control input-lg" size="12"
                      autofocus autocomplete="off" placeholder="Re-type for control"
-                     ng-model="passphraseCheck"
+                     ng-model="$parent.passphraseCheck"
                      ng-show="showPassphrase">
               <input type="password" class="form-control input-lg" size="12"
                      autofocus autocomplete="off" placeholder="Re-type for control"
-                     ng-model="passphraseCheck"
+                     ng-model="$parent.passphraseCheck"
                      ng-hide="showPassphrase">
             </div>
           </div>
@@ -35,12 +35,12 @@
             </label>
           </div>
           <div class="form-group">
-            <button type="submit" class="btn btn-block btn-primary btn-lg"
-                    ng-disabled="check && passphrase != passphraseCheck">Enter</button>
             <p class="text-danger"
-               ng-show="check && passphrase && passphraseCheck && passphrase != passphraseCheck">
+               ng-show="check && passphrase && passphraseCheck && passphrase !== passphraseCheck">
               Passphrases do not match
             </p>
+            <button type="submit" class="btn btn-block btn-primary btn-lg"
+                    ng-disabled="!passphrase || (check && passphrase !== passphraseCheck)">Enter</button>
           </div>
         </form>
       </div>
