--- a/app/views/account.html
+++ b/app/views/account.html
@@ -74,7 +74,7 @@
     </tr>
     <tr class="txlist-detail"
         ng-show="tx.active"
-        ng-animate
+        ng-animate="'txlist-detail'"
         ng-repeat-end>
       <td colspan="5">
         <dl class="dl-horizontal">
