Generalize muted input icons

--- a/app/views/send.html
+++ b/app/views/send.html
@@ -30,7 +30,7 @@
                  for address in suggestAddresses()"
                bs-typeahead
                required>
-        <a href="" class="glyphicon glyphicon-qrcode txaddress-qrscan text-muted"
+        <a href="" class="glyphicon glyphicon-qrcode input-icon text-muted"
            title="Scan QR code"
            ng-click="scanQr()"
            ng-show="!transaction.address && !qrScanning && qrScanEnabled"></a>
