Allow empty passphrase

--- a/app/views/modal.passphrase.html
+++ b/app/views/modal.passphrase.html
@@ -40,7 +40,7 @@
               Passphrases do not match
             </p>
             <button type="submit" class="btn btn-block btn-primary btn-lg"
-                    ng-disabled="!passphrase || (check && passphrase !== passphraseCheck)">Enter</button>
+                    ng-disabled="check && passphrase !== passphraseCheck">Enter</button>
           </div>
         </form>
       </div>
